// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login renders correctly 1`] = `
<div
  className="row justify-content-center"
>
  <div
    className="col-4"
  >
    <div
      className="card shadow-lg mt-4"
    >
      <div
        className="card-header text-center bazul3"
      >
        <h3
          className="blanco"
        >
          Login
        </h3>
      </div>
      <div
        className="card-body bazul1"
      >
        <form
          className="needs-validation"
          noValidate={true}
          onSubmit={[Function]}
        >
          <div
            className="row"
          >
            <div
              className="col"
            >
              <label
                className="form-label"
                htmlFor="userName"
              >
                Usuario
              </label>
              <input
                autoFocus={true}
                className="form-control bblanco"
                id="userName"
                onChange={[Function]}
                required={true}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="row mt-3"
          >
            <div
              className="col"
            >
              <label
                className="form-label"
                htmlFor="password"
              >
                Contraseña
              </label>
              <input
                className="form-control bblanco"
                id="password"
                onChange={[Function]}
                required={true}
                type="password"
                value=""
              />
            </div>
          </div>
          <div
            className="row justify-content-center"
          >
            <div
              className="col-8 text-center"
            >
              <button
                className="btn btn-primary btn-block my-4 bazul2 blanco"
                type="submit"
              >
                Iniciar sesión
              </button>
            </div>
          </div>
          <div
            className="text-center"
          >
            <p>
              ¿No registrado? 
              <a
                href="/register"
                onClick={[Function]}
              >
                Registrarse
              </a>
            </p>
          </div>
          <div
            className="text-end"
          >
            <p>
              <a
                href="/loginAdmin"
                onClick={[Function]}
              >
                Administrador
              </a>
            </p>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginAdmin renders correctly 1`] = `
<div
  className="row justify-content-center"
>
  <div
    className="col-4"
  >
    <div
      className="card shadow-lg mt-4"
    >
      <div
        className="card-header text-center bazul3"
      >
        <h3
          className="blanco"
        >
          Login
        </h3>
      </div>
      <div
        className="card-body bazul1"
      >
        <form
          className="needs-validation"
          noValidate={true}
          onSubmit={[Function]}
        >
          <div
            className="row"
          >
            <div
              className="col"
            >
              <label
                className="form-label"
                htmlFor="userName"
              >
                Usuario
              </label>
              <input
                autoFocus={true}
                className="form-control bblanco"
                id="userName"
                onChange={[Function]}
                required={true}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="row mt-3"
          >
            <div
              className="col"
            >
              <label
                className="form-label"
                htmlFor="password"
              >
                Contraseña
              </label>
              <input
                className="form-control bblanco"
                id="password"
                onChange={[Function]}
                required={true}
                type="password"
                value=""
              />
            </div>
          </div>
          <div
            className="row justify-content-center"
          >
            <div
              className="col-8 text-center"
            >
              <button
                className="btn btn-primary btn-block my-4 bazul2"
                type="submit"
              >
                Iniciar sesión
              </button>
            </div>
          </div>
          <div
            className="text-end"
          >
            <p>
              <a
                href="/"
                onClick={[Function]}
              >
                No soy administrador
              </a>
            </p>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Register renders correctly 1`] = `
<div
  className="row justify-content-center "
>
  <div
    className="col-6"
  >
    <div
      className="card shadow-lg mt-4"
    >
      <div
        className="card-header text-center bazul3"
      >
        <h3
          className="blanco"
        >
          Registro
        </h3>
      </div>
      <div
        className="card-body bazul1"
      >
        <form
          className="needs-validation"
          noValidate={true}
          onSubmit={[Function]}
        >
          <div
            className="row"
          >
            <div
              className="col"
            >
              <label
                className="form-label"
                htmlFor="userName"
              >
                Usuario
              </label>
              <input
                autoFocus={true}
                className="form-control bblanco"
                id="userName"
                onChange={[Function]}
                required={true}
                type="text"
                value=""
              />
            </div>
            <div
              className="col"
            >
              <label
                className="form-label"
                htmlFor="password"
              >
                Contraseña
              </label>
              <input
                className="form-control bblanco"
                id="password"
                onChange={[Function]}
                required={true}
                type="password"
                value=""
              />
            </div>
          </div>
          <div
            className="row mt-3"
          >
            <div
              className="col"
            >
              <label
                className="form-label"
                htmlFor="firstName"
              >
                Nombre
              </label>
              <input
                autoFocus={true}
                className="form-control bblanco"
                id="firstName"
                onChange={[Function]}
                required={true}
                type="text"
                value=""
              />
            </div>
            <div
              className="col"
            >
              <label
                className="form-label"
                htmlFor="lastName"
              >
                Apellido
              </label>
              <input
                autoFocus={true}
                className="form-control bblanco"
                id="lastName"
                onChange={[Function]}
                required={true}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="row mt-3"
          >
            <div
              className="col"
            >
              <label
                className="form-label"
                htmlFor="email"
              >
                Email
              </label>
              <input
                autoFocus={true}
                className="form-control bblanco"
                id="email"
                onChange={[Function]}
                placeholder="name@example.com"
                required={true}
                type="email"
                value=""
              />
            </div>
            <div
              className="col text-center"
            >
              <button
                className="btn btn-primary btn-block my-4 bazul2"
                type="submit"
              >
                Registrarse
              </button>
            </div>
          </div>
          <div
            className="text-center"
          >
            <p>
              ¿Ya registrado? 
              <a
                href="/"
                onClick={[Function]}
              >
                Iniciar Sesión
              </a>
            </p>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
